# kokkos-auto-threads

./: .gitignore  Analyzer.cpp  CMakeLists.txt  Executor.cpp  KokkosAutoThreads.cpp  KokkosAutoThreads.hpp  LibKokkosAutoThreads.cpp  README.md  hellokokkos  kokkosautothreads.db  kokkosautothreads.hpp  lib.cpp  main.cpp
analyzers/: average  kat-average  kat-mem-inst  kat-misc  kat-plotter  kat-rm-outliers  kat-sort  plotter
mperf/: CMakeLists.txt  Core.cpp  Core.hpp  KokkosTools.hpp  LinuxPerf.cpp  LinuxPerf.hpp
